src/stylesheet.css
/* ... */
.g-item {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: calc(33% - (var(--se-padding) / 2));
  margin: 0;
}

@media screen and (max-width: 600px) {
  .g-item {
    width: 100%;
  }
}

@media screen and (min-width: 601px) and (max-width: 900px) {
  .g-item {
    width: calc(50% - (var(--se-padding) / 2));
  }
}

.g-img-container {
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 0;
  min-width: 0;
  aspect-ratio: 1 / 1;
}

.g-img-container > img {
  border-radius: 0.25rem;
  transition: all 250ms cubic-bezier(0,.65,.5,1);
  max-width: 100%;
  max-height: 100%;
  box-shadow: 0 5px 10px rgba(0,0,0,0.5);
}

.g-img-container:not(:active):hover > img {
  transform: translateY(-5px);
}

.g-label-container {
  width: 90%;
  margin-top: 1rem;
  display: flex;
  align-items: flex-start;
  gap: 1rem;
}

.g-label-container > p {
  text-align: left;
  width: 100%;
  font-style: oblique 10deg;
  font-size: 20px;
}

.g-label-container > time {
  text-align: right;
  font-size: 34px;
  transform: translateY(-0.15em);
}

#viewer-container {
  transition: all 250ms cubic-bezier(0,.65,.5,1);
  display: flex;
  align-items: center;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.9);
  box-sizing: border-box;
  padding: 1rem;
  user-select: none;
  pointer-events: none;
  opacity: 0;
  z-index: 999999;
}

#viewer-container.visible {
  opacity: 1;
  pointer-events: auto;
  backdrop-filter: blur(5px);
}

#viewer-container figure {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

#viewer-container div {
  min-width: 0;
  min-height: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 1;
}

#viewer-container img {
  border-radius: 0.25rem;
  object-fit: contain;
  max-width: 100%;
  max-height: 100%;
  box-shadow: 0 5px 10px rgba(0,0,0,0.5);
}

#viewer-container figcaption {
  flex-grow: 0;
  max-width: 800px;
  width: 100%;
  background-color: var(--section-background);
  box-sizing: border-box;
  padding: 1rem;
  border-radius: 0.75rem;
  box-shadow: 0 5px 10px rgba(0,0,0,0.5);
}

/* header */

header {
  align-items: center;
}

header > img {
  width: 33%;
}

@media screen and (max-width: 600px) {
  header > img {
    width: 44%;
  }
}

header > img:hover {
  transform: scaleX(-100%);
}

/* buttons */

.button-list {
  display: flex;
  width: 100%;
  justify-content: center;
  flex-wrap: wrap;
  gap: var(--se-padding);
}

.button-list > a {
  --b-padding: 0.25em;

  position: relative;
  width: 33%;
  height: 3em;
  flex-grow: 1;
  background-color: var(--button-bg);
  border-radius: 0.25rem;
  border: 3px solid var(--button-bg);
  letter-spacing: 0.5px;
  box-sizing: border-box;
  overflow-wrap: break-word;
  vertical-align: middle;
  text-decoration: none;
  font-size: 18px;
  color: var(--button-text);
  overflow: hidden;
  padding: var(--b-padding);
  -webkit-hyphens: manual;
  hyphens: manual;
  -webkit-hyphenate-character: " ";
  hyphenate-character: " ";

}

.button-list > a:hover {
  background-color: var(--button-bg-hover);
  border: 3px solid var(--button-outline-hover);
  color: var(--button-text-hover);
}

.button-list > a > span, .button-list > a > .icon {
  position: absolute;
  transition: all 250ms cubic-bezier(0,.65,.5,1);
  box-sizing: border-box;
  width: calc(100% - (var(--b-padding) * 2));
  height: calc(100% - (var(--b-padding) * 2));
}

.button-list > a > span {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}

/* button labels are offset and have variable opacity if it has a .icon class element as a sibling */
/* cus it looks cool lmao */

.button-list > a > .icon ~ span {
  opacity: 0;
  transform: translateY(25%);
}

.button-list > a:hover > .icon ~ span {
  opacity: 1;
  transform: translateY(0%);
  text-decoration: underline;
}

.button-list > a > .icon {
  -webkit-mask-size: contain;
  mask-size: contain;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
  -webkit-mask-position: center;
  mask-position: center;
  background-color: var(--button-text);
  opacity: 1;
  transform: translateY(0%);
}

.button-list > a:hover > .icon {
  background-color: var(--button-text-hover);
  opacity: 0;
  transform: translateY(-25%);
}

/* cohost */

#li-cohost > .icon {
  -webkit-mask-image: url("../assets/social-icon-cohost.svg");
  mask-image: url("../assets/social-icon-cohost.svg");
}

#li-cohost:hover {
  background-color: #83254F;
}

/* discord */

#li-discord > .icon {
  -webkit-mask-image: url("../assets/social-icon-discord.svg");
  mask-image: url("../assets/social-icon-discord.svg");
}

#li-discord:hover {
  background-color: #5865F2;
}

/* retrospring */

#li-retrospring > .icon {
  -webkit-mask-image: url("../assets/social-icon-retrospring.svg");
  mask-image: url("../assets/social-icon-retrospring.svg");
}

#li-retrospring:hover {
  background-color: #5e35b1;
}

/* tumblr */

#li-tumblr > .icon {
  -webkit-mask-image: url("../assets/social-icon-tumblr.svg");
  mask-image: url("../assets/social-icon-tumblr.svg");
}

#li-tumblr:hover {
  background-color: #34526F;
}

/* github */

#li-github > .icon {
  -webkit-mask-image: url("../assets/social-icon-github.svg");
  mask-image: url("../assets/social-icon-github.svg");
}

#li-github:hover {
  background-color: #161b22;
}

/* steam */

#li-steam > .icon {
  -webkit-mask-image: url("../assets/social-icon-steam.svg");
  mask-image: url("../assets/social-icon-steam.svg");
}

#li-steam:hover {
  background-color: #28313F;
}

/* youtube */

#li-youtube > .icon {
  -webkit-mask-image: url("../assets/social-icon-youtube.svg");
  mask-image: url("../assets/social-icon-youtube.svg");
}

#li-youtube:hover {
  background-color: #FF3333;
}
/* ... */

